fix: scrollbar offset

--- a/frontend_bundler/client/app/styles/components/card.scss
+++ b/frontend_bundler/client/app/styles/components/card.scss
@@ -80,12 +80,12 @@
 
     &--type-2 {
         .card-img {
-            // height: 270px;
+            height: 270px;
             margin-bottom: 0;
             background-color: map-get($colors, "white");
 
             @include mq($until: md) {
-                // height: 148px;
+                height: 148px;
                 // padding: 20px 20px 0 20px;
 
                 .lb-picture {
@@ -165,13 +165,13 @@
 
 
     &--type-6 {
-        // .card-img {
-        //     height: 305px;
+        .card-img {
+            height: 305px;
 
-        //     @include mq($until: md) {
-        //         height: 185px;
-        //     }
-        // }
+            @include mq($until: md) {
+                height: 185px;
+            }
+        }
 
         .card-infobox {
             @include mq($until: md) {
